--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bull": "^3.16.0",
     "chai-http": "^4.3.0",
     "express": "^4.18.2",
+    "express-basic-auth": "^1.2.1",
     "image-thumbnail": "^1.0.10",
     "mime-types": "^2.1.27",
     "mongodb": "^3.7.3",
     "redis": "^2.8.0",
     "sha1": "^1.1.1",
-    "uuid": "^8.2.0"
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.0",
